--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@web3forms/react": "^1.1.3",
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.11.0"
+    "react-intersection-observer": "^9.4.3",
+    "react-router-dom": "^6.11.0",
+    "react-typical": "^0.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
